# aiogram_nats_mailing

./: .flake8  LICENSE  MRE.md  README.md  pyproject.toml
aiogram_mailing/: __init__.py  consumer.py  message.py  publisher.py
aiogram_mailing/api/: broker.py  consumer.py  publisher.py
